# fastapi-sql-boilerplate-async

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  router.py
app/common/: router.py
app/user/: models.py
app/user/models_manager/: user.py
app/user/routers/: __init__.py  auth.py  user.py
app/user/schemas/: auth.py  user.py
cli/: main.py
core/: config.py  constants.py  exceptions.py
core/auth/: __init__.py  jwt.py
core/db/: manager.py  models_mixin.py  session.py
core/utils/: model.py  string.py
migrations/: env.py
migrations/versions/: 2cf17be7a301_forgot_password.py  9e9c8b77ba2a_init.py  b5768523705c_init.py
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  data.py
tests/app/user/: test_auth.py  test_user.py
worker/: __init__.py  main.py
worker/tasks/: __init__.py  email.py  scheduled_job.py
